WIP: Active States

--- a/style.css
+++ b/style.css
@@ -150,6 +150,35 @@ form {
   gap: 1rem;
 }
 
+.form-control {
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+/* ! WIP ACTIVE STATES */
+/* ************* */
+.invalid-message {
+  font-style: italic;
+  color: var(--secondary-color-2);
+  font-size: .85rem;
+  align-self: flex-start;
+  padding-inline-start: 2rem;
+}
+
+
+
+/* .input__invalid {
+  border: 1px solid var(--secondary-color-2);
+
+} */
+
+/* .email__input:invalid {
+  border: 1px solid var(--secondary-color-2);
+
+} */
+/* ************* */
+
 
 .email__input::placeholder {
   color: hsla(223, 100%, 88%, 0.75);
@@ -163,7 +192,7 @@ form {
   border-radius: 100px;
   padding-block: .85rem;
   box-shadow: 0 7px 12px rgba(79, 125, 243, 0.5);
-
+  cursor: pointer;
 }
 
 
@@ -231,6 +260,7 @@ form {
 
   .submit-btn {
     flex: 1;
+    height: min-content;
   }
 
   .social-media__list {
