--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ form {
 
 .email__input::placeholder {
   /* color: hsla(223, 100%, 88%, 0.75); */
-  color: var(--secondary-color-1)
+  color: var(--neutral-color-1)
 }
 
 
